basiliq-store/src/tests/snapshots/basiliq_store__tests__config__config_default.snap
---
source: basiliq-store/src/tests/config.rs
expression: config

---
{
  "resources": {
    "public__movies": {
      "target": {
        "schema": "public",
        "table": "movies"
      },
      "enabled": true,
      "relationships": {
        "public__movies_staff": {
          "target": {
            "schema": "public",
            "table": "movies_staff"
          },
          "enabled": true,
          "field": "movies"
        },
        "public__peoples": {
          "target": {
            "schema": "public",
            "table": "peoples"
          },
          "through": {
            "schema": "public",
            "table": "movies_staff",
            "field": "person"
          },
          "enabled": true,
          "field": "id"
        }
      }
    },
    "public__movies_staff": {
      "target": {
        "schema": "public",
        "table": "movies_staff"
      },
      "enabled": true,
      "relationships": {
        "public__movies": {
          "target": {
            "schema": "public",
            "table": "movies"
          },
          "enabled": true,
          "field": "id"
        },
        "public__peoples": {
          "target": {
            "schema": "public",
            "table": "peoples"
          },
          "enabled": true,
          "field": "id"
        }
      }
    },
    "public__peoples": {
      "target": {
        "schema": "public",
        "table": "peoples"
      },
      "enabled": true,
      "relationships": {
        "public__movies": {
          "target": {
            "schema": "public",
            "table": "movies"
          },
          "through": {
            "schema": "public",
            "table": "movies_staff",
            "field": "movies"
          },
          "enabled": true,
          "field": "id"
        },
        "public__movies_staff": {
          "target": {
            "schema": "public",
            "table": "movies_staff"
          },
          "enabled": true,
          "field": "person"
        }
      }
    }
  }
}
